fix mobile IG feed spacing

--- a/themes/mdb/assets/sass/components/_gallery.scss
+++ b/themes/mdb/assets/sass/components/_gallery.scss
@@ -90,6 +90,10 @@ ul.gallery {
 ul.gallery.ig-feed {
   margin-bottom: $spacer*2;
 
+  @include breakpoint(mobile) {
+    margin-bottom: 0;
+  }
+
   li.item {
     height: auto;
     padding-bottom: 0;
